dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(aoaproxy, 0.4)


AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE()

AC_ISC_POSIX
AC_PROG_CC
AC_STDC_HEADERS
LIBUSB_REQUIRED=1.0
AO_REQUIRED=1.0.0
BLUEZ_REQUIRED=3.3

AC_CONFIG_FILES(Makefile src/Makefile)

PKG_CHECK_MODULES(LIBUSB, libusb-1.0 >= $LIBUSB_REQUIRED)
PKG_CHECK_MODULES(AO, ao >= $AO_REQUIRED)
PKG_CHECK_MODULES(BLUEZ, bluez >= $AO_REQUIRED)

AC_OUTPUT

